sandc/test/fixtures/pbtRegression/shouldSucceed/intraFileItems/IntraFileItems.sand
pub class IntraFileItems extends Foo {
    bar: Bar;
}

open class Foo {

}

class Bar {

}