sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedNamedFromUnnamed/Unnamed.sand
pub class Unnamed extends Foo {
    
}